--- a/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
+++ b/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
@@ -71,4 +71,8 @@
     cursor: not-allowed
   .k-widget.ng-invalid
     .k-input
-      color: $grey
+      color: gray
+  .required-field::after
+    content: "*"
+    color: $color-message-error--red
+    margin-left: 4px
