--- a/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
+++ b/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
@@ -1,6 +1,10 @@
 .api-action-view-edit-component
   .modal-body
     padding-bottom: 0px
+  //.form-control.ng-invalid
+  //  border: unset
+  .form-control.ng-invalid.k-dropdown
+    border: unset
   .k-widget.form-control .k-input, .form-control.k-block .k-input
     height: 2.9rem
     .has-error-custom
