--- a/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
+++ b/web-app/tds/web-app/css/elements/component/api-action-view-edit-component.sass
@@ -76,6 +76,15 @@
   .k-widget.ng-invalid
     .k-input
       color: gray
+  .tab-pane.is-hidden
+    visibility: hidden
+    height: 0
+    width: 0
+  .tab-pane.is-displayed
+    display: block
+    visibility: visible
+    width: 100%
+    height: 100%
   .modal-body.is-edit-mode
     .required-field::after
       content: "*"
