TM-14355 - Fix icon location on legacy page.

--- a/src/main/webapp/components/comment/grid-buttons-template.html
+++ b/src/main/webapp/components/comment/grid-buttons-template.html
@@ -6,9 +6,9 @@
 	<img ng-src="{{applyRootPath('/assets/icons/table_add.png')}}" border="0px"/>
 </a>
 <a ng-if="(hasComments=='comments') && canViewComments" ng-click="listBy('comment')" id="icon_comment_{{assetId}}" title="Create Comment or Show Comments">
-	<img ng-src="{{applyRootPath('/images/comment_exists.png')}}" border="0px"/>
+	<img ng-src="{{applyRootPath('/assets/icons/comment_exists.png')}}" border="0px"/>
 </a>
 <a ng-if="(hasComments=='noComments') && canCreateComments" ng-click="createCommentBy('comment')" id="icon_comment_{{assetId}}" title="Create Comment or Show Comments">
-	<img ng-src="{{applyRootPath('/icons/comment_add.png')}}" border="0px"/>
+	<img ng-src="{{applyRootPath('/assets/icons/comment_add.png')}}" border="0px"/>
 </a>
 </span>
